# hohs_hand

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  view_h5.py
configs/: train_artic.yaml  train_ddpm.yaml  train_flux.yaml  train_flux_512.yaml  train_flux_a100.yaml  train_flux_a100_lora.yaml  train_flux_a100_lora_calib.yaml
data/: hand_dataset.py  latent_dataset.py
inference/: _arctic_dl.py  arctic_cfg_scan.py  arctic_ckpt_scan.py  arctic_inpaint.py  arctic_make_conditions.py  arctic_steps_scan.py  palm_make_conditions.py  sam2_masks.py
models/: unet.py
requirements/: hamer_runtime.txt
scripts/: batch_inpaint.py  bootstrap_hamer.sh  download_palm.py  generate_hand_crops.py  h5_to_hamer_npz.py  install_python310.sh  launch_flux_train.sh  launch_flux_train_512.sh  launch_flux_train_a100.sh  launch_flux_train_a100_lora.sh  launch_train.sh  precompute_flux_embeddings.py  precompute_latents.py  prepare_artic_npz.py  run_palm_to_hamer.sh  setup_env.sh  smoke_test.py  test_flux_fill_inpaint.py  test_setup.py  train_artic.sh
src/hohs_mano_regressor/: __init__.py  config.py  train_artic.py
src/hohs_mano_regressor/data/: __init__.py  artic_manifest.py
src/hohs_mano_regressor/models/: __init__.py  artic_hamer.py
tests/: test_artic_manifest.py
training/: diffusion.py  train.py  train_flux_controlnet.py  train_flux_controlnet_a100.py  train_flux_controlnet_latent.py  train_flux_controlnet_lora.py
